Few perf changes and helper scripts.